--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>CV</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url= CV-PDF_link &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://github.com/dagousket/whoami/raw/main/cv_2022_nocontact.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
