--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Hey there!</title>
-  <link rel="icon" href="https://github.com/dagousket/whoami/raw/dagousket-favicon/dagousket_golden_v2.png">
+  <title>Hello</title>
+  <link rel="shortcut icon" type="image/png" href="dagousket_golden_v2.png">
 </head>
   <body style="width:100%; height:100%; margin:0;">
     <iframe src="https://docs.google.com/gview?url=https://github.com/dagousket/whoami/raw/main/cv_2022_nocontact.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
